# BetterInputs

./: ABOUT.md  CHANGELOG.md  CMakeLists.txt  README.md  mod.json
.github/workflows/: geode-build.yml
src/: BetterTextInputNode.cpp  BetterTextInputNode.hpp  macos.mm  main.cpp  utils.hpp  windows.cpp
src/HighlightedString/: HighlightedString.hpp
src/hooks/: CCIMEDispatcher.cpp  CCScene.cpp  CCTextFieldTTF.cpp
src/platform/: macos.mm  windows.cpp
src/types/: CCLabelBMFontPlus.hpp  CharNode.hpp  CharNodeInfo.hpp  HighlightedString.hpp  InputNodeTextAreaInfo.hpp  TouchMessageType.hpp
